2007-02-06  Andy Wingo  <wingo@pobox.com>

	* common/as-python.m4: Allow stdout of the test program to hit the
	console. Write the catchall exception message to stderr.

	* flumotion/common/boot.py: Moved here from boot.py.in; not
	autogenerated any more. Less clever and more comprehensive checks.
	Don't munge sys.path any more to include dirs found at
	configure-time; instead if the caller wants to affect which pygtk
	we find it should change the environment. Fixes #500.

	* pkgconfig/flumotion.pc.in: 
	* pkgconfig/flumotion-uninstalled.pc.in: Don't add gstreamer to
	the pkg-config requires; pkg-config is unsuited to flumotion.

	* configure.ac: Remove pkg-config checks for gstreamer and pygtk
	-- use the same runtime checks that flumotion uses. We have to
	check pygtk's pkg-config file tho, because of defs and codegen.

	* common/as-python.m4: Only check for python >= 2.2. Use
	sys.version_info instead of textual comparison. Add 2.3, 2.4, and
	2.5 as candidates.

2007-02-06  Michael Smith  <msmith@fluendo.com>

	* data/upgrade-to-0.4.1.xsl:
	  A more complete component name and property name upgrader. This one
	  works for all the configs I have.

== release 0.4.1 ==

2007-02-01  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/misc/httpfile/httpfile.py:
	  Since a mount-point of / doesn't work, issue a clear failure message
	  for that case.

2007-02-01  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/component.py:
	  Always exit after calling stop(), even if the component stop fails
	  for some reason (otherwise the component will be upstoppable).

2007-01-31  Michael Smith  <msmith@fluendo.com>

	* README:
	  We don't support twisted 1.3 in 0.4.x

2007-01-31  Andy Wingo  <wingo@pobox.com>

	* flumotion/twisted/portal.py (BouncerPortal._authenticateCallback): 
	* flumotion/worker/feed.py (getKeycardClassesCb): Debug
	improvements.
	(_WorkerFeedDispatcher.requestAvatar): Prevent a race condition if